@@ -1,5 +1,9 @@
 # for display continuity sake please use 2 spaces instead of tabs
 
+2012-10-01 mmichaud <michael.michaud@free.fr>
+  * ExtractLayersByAttribute port r1.5 from skyjump to openjump
+  * SIDLayer port r1.3 from skyjump to openjump
+
 2012-09-30 sstein <sstein@geo.uzh.ch>
   * Modified the I18N class to retrieve the English default string if
     a received language string starts with "#T:". Accordingly I modified
